fixed css that was broken in chrome, and edited forms so that it starts out with an empty event/group

--- a/client/src/CSS/EmailModal.css
+++ b/client/src/CSS/EmailModal.css
@@ -65,7 +65,7 @@
 }
 
 .EmailModal-BtnDiv {
-  justify-content: right;
+  justify-content: flex-end;
   margin-top: 15px;
 }
 
