--- a/client/src/CSS/Groups/GroupsEdit.css
+++ b/client/src/CSS/Groups/GroupsEdit.css
@@ -66,7 +66,7 @@
 }
 
 .GroupsEdit-BtnDiv {
-  justify-content: right;
+  justify-content: flex-end;
   margin-top: 15px;
 }
 
