--- a/client/src/CSS/Groups/GroupsList.css
+++ b/client/src/CSS/Groups/GroupsList.css
@@ -1,6 +1,6 @@
 .GroupList-Top {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 .GroupList-AddButton {
