--- a/client/src/CSS/Welcome.css
+++ b/client/src/CSS/Welcome.css
@@ -38,6 +38,6 @@
 
 .Welcome-Logos {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   width: 43vh;
 }
